--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8,5 +8,31 @@ html, body {
   padding: 0;
 }
 
+.resize-left {
+  resize: both;
+  height: 100vh;
+  width: 35%;
+  overflow: auto;
+  background: transparent;
+}
+
+#resizable { width: 150px; height: 150px; padding: 0.5em; border-right: 1px solid rgb(95, 95, 95);box-shadow: rgba(0, 0, 0, 0.205) 0px 5px 15px; background-color: transparent;}
+.ui-resizable-helper { border-right: 2px dotted gray; }
+
+.gradient-morning {
+  background: rgb(251,247,245);
+  background: -moz-linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
+  background: linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fbf7f5",endColorstr="#bfa3c2",GradientType=1);
+}
+
+.min-w-content {
+  min-width: fit-content;
+}
+
+.h-fit-content {
+  height: fit-content;
+}
 
 @tailwind utilities;
