--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
 
 
 html, body {
+  overflow-y: hidden;
   overflow-y: hidden;
   margin: 0;
   padding: 0;
@@ -35,4 +37,17 @@ html, body {
   height: fit-content;
 }
 
-@tailwind utilities;
+.max-w-100vh {
+  max-width: 100vw;
+}
+
+.resize-right {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: .75em;
+}
+
