--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow-x: auto;
 }
 
 body {
@@ -23,6 +24,10 @@ a:hover {
 
 a:visited {
 	color: rgb(0,80,160);
+}
+
+hover-underline:hover {
+	text-decoration: underline;
 }
 
 label {
