--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,14 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-
-html, body {
-
+html,
+body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+textarea {
+  scrollbar-width: thin;
+  
+}
+
+
 
 .resize-left {
   resize: both;
@@ -19,14 +28,38 @@ html, body {
   background: transparent;
 }
 
-#resizable { width: 150px; height: 150px; padding: 0.5em; border-right: 1px solid rgb(95, 95, 95);box-shadow: rgba(0, 0, 0, 0.205) 0px 5px 15px; background-color: transparent;}
-.ui-resizable-helper { border-right: 2px dotted gray; }
+#resizable {
+  width: 150px;
+  height: 150px;
+  padding: 0.5em;
+  border-right: 1px solid rgb(95, 95, 95);
+  box-shadow: rgba(0, 0, 0, 0.205) 0px 5px 15px;
+  background-color: transparent;
+}
+.ui-resizable-helper {
+  border-right: 2px dotted gray;
+}
 
 .gradient-morning {
-  background: rgb(251,247,245);
-  background: -moz-linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
-  background: -webkit-linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
-  background: linear-gradient(0deg, rgba(251,247,245,1) 0%, rgba(232,208,196,1) 50%, rgba(191,163,194,1) 100%);
+  background: rgb(251, 247, 245);
+  background: -moz-linear-gradient(
+    0deg,
+    rgba(251, 247, 245, 1) 0%,
+    rgba(232, 208, 196, 1) 50%,
+    rgba(191, 163, 194, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(251, 247, 245, 1) 0%,
+    rgba(232, 208, 196, 1) 50%,
+    rgba(191, 163, 194, 1) 100%
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(251, 247, 245, 1) 0%,
+    rgba(232, 208, 196, 1) 50%,
+    rgba(191, 163, 194, 1) 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fbf7f5",endColorstr="#bfa3c2",GradientType=1);
 }
 
@@ -42,7 +75,6 @@ html, body {
   max-width: 100vw;
 }
 
-
 .resize-right {
   flex-grow: 1;
   flex-shrink: 0;
@@ -50,7 +82,6 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .top {
@@ -66,6 +97,24 @@ html, body {
   height: 100%;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.max-w-screen {
+  max-width: 100vw;
+}
+
+.monospace {
+  font-family: "Jetbrains Mono", monospace;
+}
+
+.text-inherit {
+  color: inherit;
+}
+
 @media screen and (max-width: 1000px) {
   #resizable {
     border: none;
@@ -77,4 +126,43 @@ html, body {
     justify-content: center;
     align-items: center;
   }
+}
+.default-serif {
+  font-family: "IBM Plex Sans Thai", sans-serif;
+}
+
+.footer-mt {
+  -moz-transform: scaleX(-1); /* Gecko */
+  -o-transform: scaleX(-1); /* Opera */
+  -webkit-transform: scaleX(-1); /* Webkit */
+  transform: scale(250%); /* Standard */
+
+  filter: FlipH; /* IE 6/7/8 */
+}
+
+.footer-mt-2 {
+  transform: scaleX(200%) scaleY(200%);
+  -moz-transform: scaleX(-1); /* Gecko */
+  -o-transform: scaleX(-1); /* Opera */
+  -webkit-transform: scaleX(-1); /* Webkit */
+  transform: scaleX(-1) scale(250%); /* Standard */
+
+  filter: FlipH; /* IE 6/7/8 */
+}
+
+.shadow-edges {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.shadow-edges-light {
+  box-shadow: rgb(255, 255, 255) 0px 14px 28px, rgb(255, 255, 255) 0px 10px 10px;
+}
+
+.shadow-light {
+  box-shadow: rgba(116, 116, 116, 0.267) 0px 14px 28px, rgba(255, 255, 255, 0.103) 0px 10px 10px;
+
+}
+
+.border-1 {
+  border: 1px solid;
 }
